[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="root" type="Control" parent="."]
margin_left = 512.394
margin_top = 298.871
margin_right = 512.394
margin_bottom = 298.871
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="root"]
margin_left = -15.1741
margin_top = -39.9991
margin_right = 63.8259
margin_bottom = -25.9991
text = "MAIN MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSplitContainer" parent="root"]
margin_right = 50.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="root/VSeparator"]
margin_right = 50.0
margin_bottom = 20.0
text = "START"

[node name="title" type="Button" parent="root/VSeparator"]
margin_top = 32.0
margin_right = 50.0
margin_bottom = 50.0
text = "TITLE"

[node name="quit" type="Button" parent="root/VSeparator"]
margin_top = 64.0
margin_right = 50.0
margin_bottom = 50.0
text = "QUIT"
[connection signal="pressed" from="root/VSeparator/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="root/VSeparator/title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="root/VSeparator/quit" to="." method="_on_quit_pressed"]
